--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+volatile = "0.2.6" # Volatile allows finer grain control of the compiler
 
 [lib]
 crate-type = ["dylib", "rlib"]
-
